--- a/UniFiler10/Views/AboutPanel.xaml
+++ b/UniFiler10/Views/AboutPanel.xaml
@@ -32,21 +32,21 @@
             Text="{x:Bind AppName, Mode=OneWay}"
             TextWrapping="Wrap" 
             Style="{StaticResource BasicTextStyle}"
-            Margin="{StaticResource PanelMargin2}"
+            Margin="{StaticResource Thickness2222}"
             VerticalAlignment="Center"/>
 
         <TextBlock Grid.Row="1"
             Text="{x:Bind AppVersion, Mode=OneWay}"
             TextWrapping="Wrap" 
             Style="{StaticResource BasicTextStyle}"
-            Margin="{StaticResource PanelMargin2}"
+            Margin="{StaticResource Thickness2222}"
             VerticalAlignment="Center"/>
 
         <TextBlock Grid.Row="2"
             Text="Copyright Lollus 2015"
             TextWrapping="Wrap" 
             Style="{StaticResource BasicTextStyle}"
-            Margin="{StaticResource PanelMargin2}"
+            Margin="{StaticResource Thickness2222}"
             VerticalAlignment="Center"/>
 
         <HyperlinkButton Grid.Row="4"
@@ -56,7 +56,7 @@
                 Foreground="{StaticResource EmailForeground}"
                 TextWrapping="Wrap" 
                 Style="{StaticResource BasicTextStyle}"
-                Margin="{StaticResource PanelMargin2}"
+                Margin="{StaticResource Thickness2222}"
                 VerticalAlignment="Center"/>
         </HyperlinkButton>
 
@@ -71,14 +71,14 @@
                 Visibility="{x:Bind RuntimeData.IsTrial, Converter={StaticResource BooleanToCollapsedConverter}, Mode=OneWay}"
                 TextWrapping="Wrap" 
                 Style="{StaticResource BasicTextStyle}"
-                Margin="{StaticResource PanelMargin2}"
+                Margin="{StaticResource Thickness2222}"
                 VerticalAlignment="Center"/>
             <TextBlock Grid.Row="0"
                 Text="{x:Bind RuntimeData.TrialResidualDays, Converter={StaticResource StringFormatterConverter}, ConverterParameter='You have {0} trial days left', Mode=OneWay}"
                 Visibility="{x:Bind RuntimeData.IsTrial, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                 TextWrapping="Wrap" 
                 Style="{StaticResource BasicTextStyle}"
-                Margin="{StaticResource PanelMargin2}"
+                Margin="{StaticResource Thickness2222}"
                 VerticalAlignment="Center"/>
             <Button Grid.Row="1"
                 Click="OnBuy_Click"
@@ -87,7 +87,7 @@
                     Text="Buy (the app will quit)"
                     TextWrapping="Wrap" 
                     Style="{StaticResource BasicTextStyle}"
-                    Margin="{StaticResource PanelMargin2}"
+                    Margin="{StaticResource Thickness2222}"
                     VerticalAlignment="Center"/>
             </Button>
         </Grid>
@@ -98,7 +98,7 @@
                 Text="Rate"
                 TextWrapping="Wrap" 
                 Style="{StaticResource BasicTextStyle}"
-                Margin="{StaticResource PanelMargin2}"
+                Margin="{StaticResource Thickness2222}"
                 VerticalAlignment="Center"/>
         </Button>
 
@@ -109,7 +109,7 @@
                 Foreground="{StaticResource EmailForeground}"
                 TextWrapping="Wrap" 
                 Style="{StaticResource BasicTextStyle}"
-                Margin="{StaticResource PanelMargin2}"
+                Margin="{StaticResource Thickness2222}"
                 VerticalAlignment="Center"/>
         </HyperlinkButton>
 
@@ -120,7 +120,7 @@
 			Canvas.ZIndex="600"
 			VerticalAlignment="Top"                
 			Background="{ThemeResource FlyoutBackgroundThemeBrush}"
-			Margin="{StaticResource PanelMargin2}">
+			Margin="{StaticResource Thickness2222}">
 
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto"/>
@@ -148,7 +148,7 @@
 			<Border Grid.Row="4"
 				Background="{ThemeResource FlyoutBackgroundThemeBrush}"
 				BorderThickness="0"
-				Margin="{StaticResource PanelMargin2}">
+				Margin="{StaticResource Thickness2222}">
 				<TextBlock TextWrapping="Wrap"
 					Text="{x:Bind LogText, Mode=OneWay}"
 					MinHeight="400" Unloaded="OnLogText_Unloaded" ScrollViewer.HorizontalScrollBarVisibility="Visible"/>
