--- a/UniFiler10/Controlz/AnimationsControl.xaml
+++ b/UniFiler10/Controlz/AnimationsControl.xaml
@@ -1,6 +1,7 @@
-﻿<ctl:OpenableObservableControl
+﻿<uctl:OpenableObservableControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,7 +12,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-	<ctl:OpenableObservableControl.Resources>
+	<uctl:OpenableObservableControl.Resources>
 		<Storyboard x:Name="UpdatingStoryboard" RepeatBehavior="Forever" >
 			<ObjectAnimationUsingKeyFrames 
                 Storyboard.TargetName="RefreshVB" 
@@ -92,7 +93,7 @@
 				<LinearDoubleKeyFrame KeyTime="0:0:0.45" Value="0"/>
 			</DoubleAnimationUsingKeyFrames>
 		</Storyboard>
-	</ctl:OpenableObservableControl.Resources>
+	</uctl:OpenableObservableControl.Resources>
 
 	<!--Background="{StaticResource SystemControlBackgroundBaseLowBrush}"-->
 	<Grid x:Name="LayoutRoot">
@@ -160,4 +161,4 @@
 		</Viewbox>
 
 	</Grid>
-</ctl:OpenableObservableControl>
+</uctl:OpenableObservableControl>
