--- a/UniFiler10/Controlz/LolloSplitView.xaml
+++ b/UniFiler10/Controlz/LolloSplitView.xaml
@@ -1,9 +1,10 @@
-﻿<local:ObservableControl
+﻿<uctl:ObservableControl
     x:Class="UniFiler10.Controlz.LolloSplitView"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Controlz"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -39,4 +40,4 @@
             ScrollViewer.VerticalScrollMode="Enabled"
             ScrollViewer.HorizontalScrollBarVisibility="Disabled"/>
     </Grid>
-</local:ObservableControl>
+</uctl:ObservableControl>
