--- a/UniFiler10/Styles/Styles.xaml
+++ b/UniFiler10/Styles/Styles.xaml
@@ -2,7 +2,8 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ctl="using:UniFiler10.Controlz"
+    xmlns:uctl="using:Utilz.Controlz"
+	xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:media="using:Windows.UI.Xaml.Media">
 
     <Thickness x:Key="Thickness0">0, 0, 0, 0</Thickness>
@@ -95,7 +96,7 @@
         <Setter Property="Padding" Value="0"/>
     </Style>
     <!-- LOLLO do not assign a key, so every ctl:TolerantListView will be affected -->
-    <Style TargetType="ctl:TolerantListView">
+    <Style TargetType="uctl:TolerantListView">
         <Setter Property="ItemContainerStyle" Value="{StaticResource ItemContainerNoPaddingStyle}"/>
     </Style>
     
