--- a/UniFiler10/Views/AboutPanel.xaml
+++ b/UniFiler10/Views/AboutPanel.xaml
@@ -1,9 +1,10 @@
-﻿<ctl:ObservableControl
+﻿<uctl:ObservableControl
     x:Class="UniFiler10.Views.AboutPanel"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+	xmlns:uctl="using:Utilz.Controlz"
 	xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -155,4 +156,4 @@
 			</Border>
 		</Grid>
 	</Grid>
-</ctl:ObservableControl>
+</uctl:ObservableControl>
