--- a/UniFiler10/Views/BinderContentPage.xaml
+++ b/UniFiler10/Views/BinderContentPage.xaml
@@ -1,9 +1,10 @@
-﻿<ctl:OpenableObservablePage
+﻿<uctl:OpenableObservablePage
     x:Class="UniFiler10.Views.BinderContentPage"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -52,7 +53,7 @@
                         Click="OnOpenCover_Click"/>
 
 					<!--SelectedIndexTolerant="{Binding CurrentFolder, Mode=OneWay, Converter={StaticResource FolderIdToIndex}}"-->
-					<ctl:TolerantListView Grid.Row="1"
+					<uctl:TolerantListView Grid.Row="1"
                         ItemsSource="{x:Bind Path=VM.Binder.Folders, Mode=OneWay}"
                         IsMultiSelectCheckBoxEnabled="False" 
                         IsItemClickEnabled="True"
@@ -66,25 +67,22 @@
 						</ItemsControl.ItemsPanel>
 						<ItemsControl.ItemTemplate>
 							<DataTemplate>
-								<!--<Border Style="{StaticResource SelectorBorder}">-->
-								<!--<Border Background="Wheat">-->
-								<ctl:TextBlockScaler
+								<uctl:TextBlockScaler
 									Height="{StaticResource CompactPaneLength}"
 									Width="{StaticResource CompactPaneLength}">
-									<ctl:TextBlockScaler.TextBlock>
+									<uctl:TextBlockScaler.TextBlock>
 										<TextBlock
 											Text="{Binding Name, Mode=OneWay}"
 											TextAlignment="Center"
 											Padding="{StaticResource Thickness4444}"
 											TextWrapping="Wrap"/>
-									</ctl:TextBlockScaler.TextBlock>
-								</ctl:TextBlockScaler>
-								<!--</Border>-->
+									</uctl:TextBlockScaler.TextBlock>
+								</uctl:TextBlockScaler>
 							</DataTemplate>
 						</ItemsControl.ItemTemplate>
-					</ctl:TolerantListView>
+					</uctl:TolerantListView>
 				</Grid>
 			</ScrollViewer>
 		</ctl:LolloSplitView.PaneContent>
 	</ctl:LolloSplitView>
-</ctl:OpenableObservablePage>
+</uctl:OpenableObservablePage>
