--- a/UniFiler10/Views/BriefcaseContentPage.xaml
+++ b/UniFiler10/Views/BriefcaseContentPage.xaml
@@ -1,9 +1,10 @@
-﻿<ctl:OpenableObservablePage
+﻿<uctl:OpenableObservablePage
 	x:Class="UniFiler10.Views.BriefcaseContentPage"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -46,7 +47,7 @@
 							VerticalAlignment="Center"
                             Click="OnOpenBriefcaseCover_Click"/>
 
-						<ctl:TolerantListView Grid.Row="1"
+						<uctl:TolerantListView Grid.Row="1"
                             ItemsSource="{x:Bind VM.Briefcase.DbNames, Mode=OneWay}"
                             IsMultiSelectCheckBoxEnabled="False" 
                             IsItemClickEnabled="True"
@@ -60,23 +61,23 @@
 							</ItemsControl.ItemsPanel>
 							<ItemsControl.ItemTemplate>
 								<DataTemplate>
-									<ctl:TextBlockScaler Grid.Row="0"
+									<uctl:TextBlockScaler Grid.Row="0"
 										Height="{StaticResource CompactPaneLength}"
 										Width="{StaticResource CompactPaneLength}">
-										<ctl:TextBlockScaler.TextBlock>
+										<uctl:TextBlockScaler.TextBlock>
 											<TextBlock
 												Text="{Binding Path='', Mode=OneWay}"
 												TextAlignment="Center"
 												Padding="{StaticResource Thickness4444}"
 												TextWrapping="Wrap"/>
-										</ctl:TextBlockScaler.TextBlock>
-									</ctl:TextBlockScaler>
+										</uctl:TextBlockScaler.TextBlock>
+									</uctl:TextBlockScaler>
 								</DataTemplate>
 							</ItemsControl.ItemTemplate>
-						</ctl:TolerantListView>
+						</uctl:TolerantListView>
 					</Grid>
 				</ScrollViewer>
 			</ctl:LolloSplitView.PaneContent>
 		</ctl:LolloSplitView>
 	</Grid>
-</ctl:OpenableObservablePage>
+</uctl:OpenableObservablePage>
