--- a/UniFiler10/Views/BriefcasePage.xaml
+++ b/UniFiler10/Views/BriefcasePage.xaml
@@ -1,9 +1,10 @@
-﻿<ctl:OpenableObservablePage
+﻿<uctl:OpenableObservablePage
     x:Class="UniFiler10.Views.BriefcasePage"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:utilz="using:Utilz"
     xmlns:vm="using:UniFiler10.ViewModels"
@@ -22,7 +23,7 @@
 				DataContext="{x:Bind VM, Mode=OneWay}">
 
 				<!-- actions for all binders -->
-				<ctl:UniversalWrapPanel Orientation="Horizontal"
+				<uctl:UniversalWrapPanel Orientation="Horizontal"
 				x:Name="ActionsUWP">
 					<ctl:LolloButton x:Name="AButton"
 					Tapped="OnAddBinderStep0_Tapped"
@@ -38,10 +39,10 @@
 					Tapped="OnSettingsButton_Tapped"
 					Symbol="Setting"
 					Uid="Settings1"/>
-				</ctl:UniversalWrapPanel>
+				</uctl:UniversalWrapPanel>
 
 				<!-- fields to add new binder -->
-				<ctl:UniversalWrapPanel Orientation="Horizontal"
+				<uctl:UniversalWrapPanel Orientation="Horizontal"
 				RelativePanel.Below="ActionsUWP"
 				x:Name="NewBinderUWP">
 					<Grid
@@ -95,10 +96,10 @@
 					Uid="Go"
 					IsEnabled="{Binding IsNewDbNameErrorMessageVisible, Converter={StaticResource TrueToFalseConverter}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
 					Visibility="{Binding NewDbName, Converter={StaticResource TextEmptyToCollapsedConverter}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
-				</ctl:UniversalWrapPanel>
+				</uctl:UniversalWrapPanel>
 
 				<!-- all binder miniatures -->
-				<ctl:TolerantListView
+				<uctl:TolerantListView
 				RelativePanel.Below="NewBinderUWP"
                 ItemsSource="{x:Bind VM.Briefcase.DbNames, Mode=OneWay}"
                 IsItemClickEnabled="True"
@@ -121,24 +122,23 @@
 								</Grid.ColumnDefinitions>
 
 								<Border Canvas.ZIndex="200"
-        						VerticalAlignment="Bottom" HorizontalAlignment="Center"
-								Height="{StaticResource MiniatureQuarterHeight}"
-								Width="{StaticResource MiniatureWidth}"
-								Background="{StaticResource VerticalWBrush}">
-
-									<ctl:TextBlockScaler Canvas.ZIndex="200"
-                                VerticalAlignment="Bottom" HorizontalAlignment="Center"
-								Height="{StaticResource MiniatureQuarterHeight}"
-								Width="{StaticResource MiniatureWidth}">
-										<ctl:TextBlockScaler.TextBlock>
+        							VerticalAlignment="Bottom" HorizontalAlignment="Center"
+									Height="{StaticResource MiniatureQuarterHeight}"
+									Width="{StaticResource MiniatureWidth}"
+									Background="{StaticResource VerticalWBrush}">
+									<uctl:TextBlockScaler Canvas.ZIndex="200"
+										VerticalAlignment="Bottom" HorizontalAlignment="Center"
+										Height="{StaticResource MiniatureQuarterHeight}"
+										Width="{StaticResource MiniatureWidth}">
+										<uctl:TextBlockScaler.TextBlock>
 											<TextBlock
 												Text="{Binding}"
 												Foreground="{StaticResource FlashyForeground}"
 												TextAlignment="Center"
 												Padding="{StaticResource Thickness4444}"
 												TextWrapping="Wrap"/>
-										</ctl:TextBlockScaler.TextBlock>
-									</ctl:TextBlockScaler>
+										</uctl:TextBlockScaler.TextBlock>
+									</uctl:TextBlockScaler>
 								</Border>
 
 								<AppBarButton Icon="Save"
@@ -159,10 +159,10 @@
 							</Grid>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
-				</ctl:TolerantListView>
+				</uctl:TolerantListView>
 
 				<ctl:AnimationsControl x:Name="AnimationsControl" RelativePanel.Below="NewBinderUWP" Canvas.ZIndex="900"/>
 			</RelativePanel>
 		</ScrollViewer>
 	</Grid>
-</ctl:OpenableObservablePage>
+</uctl:OpenableObservablePage>
