--- a/UniFiler10/Views/ConfirmationBeforeDeletingBinder.xaml
+++ b/UniFiler10/Views/ConfirmationBeforeDeletingBinder.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+	xmlns:uctl="using:Utilz.Controlz"
 	xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +11,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-	<ctl:UniversalWrapPanel ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+	<uctl:UniversalWrapPanel ScrollViewer.HorizontalScrollBarVisibility="Disabled"
 				   ScrollViewer.HorizontalScrollMode="Disabled"
 				   ScrollViewer.VerticalScrollBarVisibility="Disabled"
 				   ScrollViewer.VerticalScrollMode="Disabled">
@@ -38,5 +39,5 @@
 				MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
 				TextWrapping="Wrap"/>
 		</Button>
-	</ctl:UniversalWrapPanel>
+	</uctl:UniversalWrapPanel>
 </UserControl>
