--- a/UniFiler10/Views/DocumentView.xaml
+++ b/UniFiler10/Views/DocumentView.xaml
@@ -1,10 +1,11 @@
-﻿<ctl:ObservableControl
+﻿<uctl:ObservableControl
     x:Class="UniFiler10.Views.DocumentView"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
     xmlns:utilz="using:Utilz"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -145,4 +146,4 @@
             NavigationCompleted="WebView_NavigationCompleted"
             NavigationFailed="WebView_NavigationFailed"/>-->
     <!--</Grid>-->
-</ctl:ObservableControl>
+</uctl:ObservableControl>
