--- a/UniFiler10/Views/FolderView.xaml
+++ b/UniFiler10/Views/FolderView.xaml
@@ -1,7 +1,8 @@
-﻿<ctl:OpenableObservableControl
+﻿<uctl:OpenableObservableControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -39,7 +40,7 @@
 				</Grid.RowDefinitions>
 
 				<!-- basic data -->
-				<ctl:UniversalWrapPanel Orientation="Horizontal">
+				<uctl:UniversalWrapPanel Orientation="Horizontal">
 					<ctl:LolloTextBox
 						MinWidth="{StaticResource LandscapeItemWidth}"
 						MinHeight="{StaticResource LandscapeItemHeight}"
@@ -63,7 +64,7 @@
 							<TextBlock x:Uid="Remarks"/>
 						</TextBox.Header>
 					</ctl:LolloTextBox>
-				</ctl:UniversalWrapPanel>
+				</uctl:UniversalWrapPanel>
 
 				<!-- dynamic categories -->
 				<Grid Grid.Row="2" >
@@ -87,7 +88,7 @@
 						ItemsSource="{x:Bind VM.FolderCategorySelector, Mode=OneWay}">
 						<ItemsControl.ItemsPanel>
 							<ItemsPanelTemplate>
-								<ctl:UniversalWrapPanel Orientation="Horizontal"/>
+								<uctl:UniversalWrapPanel Orientation="Horizontal"/>
 								<!--<ItemsWrapGrid Orientation="Horizontal"/>-->
 							</ItemsPanelTemplate>
 						</ItemsControl.ItemsPanel>
@@ -110,7 +111,7 @@
 					<ItemsControl.ItemsPanel>
 						<ItemsPanelTemplate>
 							<!--<ItemsWrapGrid Orientation="Horizontal"/>-->
-							<ctl:UniversalWrapPanel Orientation="Horizontal"/>
+							<uctl:UniversalWrapPanel Orientation="Horizontal"/>
 						</ItemsPanelTemplate>
 					</ItemsControl.ItemsPanel>
 					<ItemsControl.ItemTemplate>
@@ -154,4 +155,4 @@
 			</Grid>
 		</ScrollViewer>
 	</Grid>
-</ctl:OpenableObservableControl>
+</uctl:OpenableObservableControl>
