--- a/UniFiler10/Views/MetaBriefcaseView.xaml
+++ b/UniFiler10/Views/MetaBriefcaseView.xaml
@@ -1,4 +1,4 @@
-﻿<ctl:ObservableControl
+﻿<uctl:ObservableControl
     x:Class="UniFiler10.Views.MetaBriefcaseView"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utilz="using:Utilz"
+	xmlns:uctl="using:Utilz.Controlz"
     xmlns:ctl="using:UniFiler10.Controlz"
 	xmlns:metadata="using:UniFiler10.Data.Metadata"
     mc:Ignorable="d"
@@ -107,7 +108,7 @@
 						Height="{StaticResource MetaItemHeight}"/>
 				</Grid>
 
-				<ctl:TolerantListView
+				<uctl:TolerantListView
                     ItemsSource="{Binding Categories, Mode=OneWay}"
                     SelectedItem="{Binding CurrentCategory, Mode=OneWay}"
 					ItemClick="OnCategoryListView_ItemClick"
@@ -158,7 +159,7 @@
 							</Grid>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
-				</ctl:TolerantListView>
+				</uctl:TolerantListView>
 			</StackPanel>
 
 			<!-- field descriptions-->
@@ -192,7 +193,7 @@
 				<!-- LOLLO NOTE not only here, use ItemClick instead of SelectionChanged
 				to be sure you only catch the user click and not the initial list filling -->
 				<!--SelectedItem="{Binding CurrentFieldDescription, Mode=OneTime}"-->
-				<ctl:TolerantListView
+				<uctl:TolerantListView
                     x:Name="AssignedLV"
                     ItemsSource="{Binding CurrentCategory.FieldDescriptions, Mode=OneWay}"
 					ItemClick="OnAssignedFieldDescriptionsListView_ItemClick"
@@ -256,7 +257,7 @@
 							</Grid>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
-				</ctl:TolerantListView>
+				</uctl:TolerantListView>
 
 				<Grid>
 					<Grid.ColumnDefinitions>
@@ -285,7 +286,7 @@
 
 				<!-- unassigned field descriptions -->
 				<!--SelectedItem="{Binding CurrentFieldDescription, Mode=OneTime}"-->
-				<ctl:TolerantListView
+				<uctl:TolerantListView
                     x:Name="UnassignedLV"
                     ItemsSource="{Binding ElementName=me, Path=VM.UnassignedFields, Mode=OneWay}"
 					ItemClick="OnUnassignedFieldDescriptionsListView_ItemClick"
@@ -347,7 +348,7 @@
 							</Grid>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
-				</ctl:TolerantListView>
+				</uctl:TolerantListView>
 			</StackPanel>
 
 			<!-- field values -->
@@ -396,7 +397,7 @@
 						Height="{StaticResource MetaItemHeight}"/>
 				</Grid>
 
-				<ctl:TolerantListView x:Name="PossibleValuesLV"
+				<uctl:TolerantListView x:Name="PossibleValuesLV"
                     ItemsSource="{Binding CurrentFieldDescription.PossibleValues, Mode=TwoWay}"
                     IsMultiSelectCheckBoxEnabled="False" 
                     IsItemClickEnabled="True"
@@ -436,8 +437,8 @@
 							</Grid>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
-				</ctl:TolerantListView>
+				</uctl:TolerantListView>
 			</StackPanel>
 		</Grid>
 	</ScrollViewer>
-</ctl:ObservableControl>
+</uctl:ObservableControl>
