--- a/UniFiler10/Views/SettingsPage.xaml
+++ b/UniFiler10/Views/SettingsPage.xaml
@@ -1,9 +1,10 @@
-﻿<ctl:OpenableObservablePage
+﻿<uctl:OpenableObservablePage
     x:Class="UniFiler10.Views.SettingsPage"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+	xmlns:uctl="using:Utilz.Controlz"
 	xmlns:ctl="using:UniFiler10.Controlz"
 	xmlns:views="using:UniFiler10.Views"
 	xmlns:utilz="using:Utilz"
@@ -24,7 +25,7 @@
 			</Flyout>
 		</FlyoutBase.AttachedFlyout>
 		
-		<ctl:UniversalWrapPanel Orientation="Horizontal"
+		<uctl:UniversalWrapPanel Orientation="Horizontal"
 			x:Name="ActionsUWP">
 			<ctl:LolloButton
 				Tapped="OnGoBack_Tapped"
@@ -57,7 +58,7 @@
 				Tapped="OnAbout_Tapped"
 				Symbol="Help"
 				Uid="About"/>
-		</ctl:UniversalWrapPanel>
+		</uctl:UniversalWrapPanel>
 
 		<Border RelativePanel.Below="ActionsUWP"
 			x:Name="ElevatedNotice"
@@ -94,4 +95,4 @@
 			Canvas.ZIndex="900"/>
 
 	</RelativePanel>
-</ctl:OpenableObservablePage>
+</uctl:OpenableObservablePage>
