--- a/UniFiler10/Styles/Styles.xaml
+++ b/UniFiler10/Styles/Styles.xaml
@@ -99,8 +99,11 @@
     <Style TargetType="uctl:TolerantListView">
         <Setter Property="ItemContainerStyle" Value="{StaticResource ItemContainerNoPaddingStyle}"/>
     </Style>
-    
-    <!-- LOLLO get the standard styles in Generic.xaml. To bring it up, press F12 on ApplicationForegroundThemeBrush or other ThemeResource in the code below -->
+	<Style TargetType="ListView">
+		<Setter Property="ItemContainerStyle" Value="{StaticResource ItemContainerNoPaddingStyle}"/>
+	</Style>
+
+	<!-- LOLLO get the standard styles in Generic.xaml. To bring it up, press F12 on ApplicationForegroundThemeBrush or other ThemeResource in the code below -->
     <Style x:Key="BasicTextStyle" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}"/>
         <Setter Property="FontSize" Value="20"/>
