--- a/UniFiler10/Views/BriefcaseContentPage.xaml
+++ b/UniFiler10/Views/BriefcaseContentPage.xaml
@@ -47,7 +47,7 @@
 							VerticalAlignment="Center"
                             Click="OnOpenBriefcaseCover_Click"/>
 
-						<uctl:TolerantListView Grid.Row="1"
+						<ListView Grid.Row="1"
                             ItemsSource="{x:Bind VM.Briefcase.DbNames, Mode=OneWay}"
                             IsMultiSelectCheckBoxEnabled="False" 
                             IsItemClickEnabled="True"
@@ -74,7 +74,7 @@
 									</uctl:TextBlockScaler>
 								</DataTemplate>
 							</ItemsControl.ItemTemplate>
-						</uctl:TolerantListView>
+						</ListView>
 					</Grid>
 				</ScrollViewer>
 			</ctl:LolloSplitView.PaneContent>
