--- a/UniFiler10/Views/BriefcasePage.xaml
+++ b/UniFiler10/Views/BriefcasePage.xaml
@@ -100,7 +100,7 @@
 				</uctl:UniversalWrapPanel>
 
 				<!-- all binder miniatures -->
-				<uctl:TolerantListView
+				<ListView
 					RelativePanel.Below="NewBinderUWP"
 					ItemsSource="{x:Bind VM.Briefcase.DbNames, Mode=OneWay}"
 					IsItemClickEnabled="True"
@@ -160,7 +160,7 @@
 							</Grid>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
-				</uctl:TolerantListView>
+				</ListView>
 
 				<ctl:AnimationsControl x:Name="AnimationsControl" RelativePanel.Below="NewBinderUWP" Canvas.ZIndex="900"/>
 			</RelativePanel>
